etc/pki/ca/harbor-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: harbor-ingress
  namespace: harbor
  annotations:
    # Add your annotations here
    certmanager.k8s.io/cluster-issuer: ca-issuer
    ingress.kubernetes.io/ssl-redirect: "true"
    ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
spec:
  rules:
    - host: harbor.127.0.0.1.traefik.me
      http:
        paths:
        - path: "/"
          pathType: Prefix
          backend:
            service:
              name: harbor
              port:
                number: 443
